tests/baselines/reference/requireOfJsonFileWithModuleNodeResolutionEmitNone.errors.txt
error TS5071: Option '--resolveJsonModule' cannot be specified when 'module' is set to 'none', 'system', or 'umd'.
file1.ts(1,1): error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.


!!! error TS5071: Option '--resolveJsonModule' cannot be specified when 'module' is set to 'none', 'system', or 'umd'.
==== file1.ts (1 errors) ====
    import * as b from './b.json';
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
    
==== b.json (0 errors) ====
    {
        "a": true,
        "b": "hello"
    }